--- a/test/numerical-testing.html
+++ b/test/numerical-testing.html
@@ -8,7 +8,7 @@
 <body>
 <h1> numerical Testing </h1>
 <p> This semipublic page will be used for testing numerical.js. </p>
-<script data-main="scripts/main" src="../scripts/require.js"></script>
+<script data-main="../scripts/main" src="../scripts/require.js"></script>
 </body>
 
 </html>
